--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,15 +1,15 @@
-name: Build and deploy to Kuroco front
+name: Build and deploy to Kuroco front(develop)
 on:
   push:
     branches:
-      - main
+      - develop
   issue_comment:
     types: [created, edited]
   workflow_dispatch:
 
 env:
-  APP_ENV: production
-  
+  APP_ENV: development
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -31,6 +31,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ steps.get_branch.outputs.branch }}
+      - name: Copy kuroco_front.json
+        run:  cp public/kuroco_front_dev.json public/kuroco_front.json         
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
@@ -74,6 +76,8 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
+      - name: Copy kuroco_front.json
+        run:  cp public/kuroco_front_dev.json public/kuroco_front.json          
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
